ecmascript/parser/tests/test262-error-references/fail/73d1b1b1bc1dabfb.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/73d1b1b1bc1dabfb.js:1:6
  |
1 | super
  |      ^

